--- a/SaraiManagement/Views/Shared/_Layout.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
     <!-- m (margin) Margem externa de uma div
          p (padding) Margem interna de uma div -->
     <div class="row m-1 p-1">
-        <div id="categories" class="col">
-        </div>
+        @*<div id="categories" class="col">
+        </div>*@
         <!--Renderbody é o que ta dentro de uma view, fora disso não muda continua com suas proprias formatações-->
-        <div class="col-11">
+        <div class="col-12">
             @RenderBody()
         </div>
     </div>
