--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Sarai Management</h1>
 </div>
 
-<div class="container-fluid d-flex flex-wrap" style="margin: 0 auto; width: 60%">
+<div class="container-fluid d-flex flex-wrap" style="margin: 0 auto; width: 60%; position: absolute;">
 
     <!-- Aluno -->
     <div class="card" style="width: 18rem; margin: 10px 20px 10px 20px; border: 5px solid black; height: 25%">
