--- a/SaraiManagement/Views/Usuario/Consultar.cshtml
+++ b/SaraiManagement/Views/Usuario/Consultar.cshtml
@@ -5,34 +5,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Detalhes</h1>
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
-<div>
-    <h4>Usuario</h4>
-    <hr />
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex; justify-content: center; align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center">Detalhes do Usuário</h1>
+
+<hr />
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
+    
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
+            @*@Html.DisplayNameFor(model => model.Nome)*@
+            <label class="fonte">Nome: </label>
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Senha)
+            @*@Html.DisplayNameFor(model => model.Senha)*@
+            <label class="fonte">Senha: </label>
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Senha)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tipo)
+            @*@Html.DisplayNameFor(model => model.Tipo)*@
+            <label class="fonte">Tipo: </label>
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Tipo)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.UsuarioID" class="btn btn-primary" role="button" aria-pressed="true">Editar</a>
-    <a asp-action="Delete" asp-route-id="@Model.UsuarioID" class="btn btn-danger" role="button" aria-pressed="true">Excluir</a>
-    <a asp-action="List" asp-route-id="@Model.UsuarioID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+<hr />
+<div class="centraliza">
+    <a asp-action="Edit" asp-route-id="@Model.UsuarioID" class="btn btn-primary botao" role="button" aria-pressed="true">Editar</a>
+    <a asp-action="Delete" asp-route-id="@Model.UsuarioID" class="btn btn-danger botao" role="button" aria-pressed="true">Excluir</a>
+    <a asp-action="List" asp-route-id="@Model.UsuarioID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
 </div>
