--- a/SaraiManagement/Views/Usuario/Edit.cshtml
+++ b/SaraiManagement/Views/Usuario/Edit.cshtml
@@ -5,9 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Editar</h1>
+<h1 style="text-align: center">Editar dados do Usuário</h1>
 <hr />
-<div class="row">
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
+
     <div class="col-md-4">
         <form asp-action="Edit">
             <div class="form-group">
@@ -31,5 +32,6 @@
             </div>
         </form>
     </div>
+
 </div>
 
