--- a/SaraiManagement/Views/Usuario/Login.cshtml
+++ b/SaraiManagement/Views/Usuario/Login.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Login</h1>
+<h1 style="text-align: center">Login</h1>
 
 <hr />
-<div class="row">
+<div>
 
-    <div class="col-2"></div>
-
-    <div class="container-fluid d-flex flex-wrap col-8" style="margin: 0 auto">
-
+    @*<div class="col-2"></div>*@
+    
+    @*<div class="container-fluid d-flex flex-wrap col-8" style="margin: 0 auto">*@
+    <div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
         <div class="col-md-4">
             <form asp-action="Login">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
