--- a/SaraiManagement/wwwroot/css/site.css
+++ b/SaraiManagement/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Configurações Grupo
+-------------------------------------------------- */
+
+.centraliza {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+
+.fonte {
+    font-size: 20px;
+}
