--- a/SaraiManagement/Views/Movimentacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Consultar.cshtml
@@ -5,55 +5,88 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Detalhes</h1>
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
-<div>
-    <hr />
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center">Detalhes da Movimentação</h1>
+<hr />
+
+<div class="centraliza">
+
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Valor)
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Valor)*@
+            <label class="fonte">Valor: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model=> model.Valor)
         </dd>
+
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoMovimentacao)
+            @*@Html.DisplayNameFor(model => model.TipoMovimentacao)*@
+            <label class="fonte">Tipo de Movimentação: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.TipoMovimentacao)
         </dd>
+
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataMovimentacao)
+            @*@Html.DisplayNameFor(model => model.DataMovimentacao)*@
+            <label class="fonte">Data da Movimentação: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.DataMovimentacao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Descricao)*@
+            <label class="fonte">Descrição: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Doador)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Doador)*@
+            <label class="fonte">Doador: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.Doador.Nome)
         </dd>
+
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
+            @*@Html.DisplayNameFor(model => model.Usuario)*@
+            <label class="fonte">Usuário: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.Usuario.Nome)
         </dd>
+
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Caixa)
+            @*@Html.DisplayNameFor(model => model.Caixa)*@
+            <label class="fonte">Caixa: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 fonte">
             @Html.DisplayFor(model => model.Caixa.Descricao)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+<hr />
+<div class="centraliza">
+    <a asp-action="Edit" asp-route-id="@Model.MovimentacaoID" class="btn btn-primary botao" role="button" aria-pressed="true">Editar</a>
+    <a asp-action="Delete" asp-route-id="@Model.MovimentacaoID" class="btn btn-danger botao" role="button" aria-pressed="true">Excluir</a>
+    <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
 </div>
