--- a/SaraiManagement/Views/Movimentacao/Delete.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Delete.cshtml
@@ -5,60 +5,87 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Excluir</h1>
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
-<h3>Tem certeza que deseja excluir?</h3>
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center;">Tem certeza que deseja excluir?</h1>
+<hr />
 <div>
-    <h4>Movimentacao</h4>
-    <hr />
+
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Valor)
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Valor)*@
+            <label class="fonte">Valor: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Valor)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoMovimentacao)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.TipoMovimentacao)*@
+            <label class="fonte">Tipo de Movimentação: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.TipoMovimentacao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataMovimentacao)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.DataMovimentacao)*@
+            <label class="fonte">Data da Movimentação: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.DataMovimentacao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Descricao)*@
+            <label class="fonte">Descrição: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Doador)
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Doador)*@
+            <label class="fonte">Doador: </label>
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doador.Cidade)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
+        <dd class="col-sm-10 fonte">
+            @Html.DisplayFor(model => model.Doador.Nome)
+        </dd>
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Usuario)*@
+            <label class="fonte">Usuário: </label>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Usuario.Nome)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Caixa)
+        </dd>
+
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Caixa)*@
+            <label class="fonte">Caixa: </label>
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Caixa.CaixaID)
-        </dd class>
+        <dd class="col-sm-10 fonte">
+            @Html.DisplayFor(model => model.Caixa.Descricao)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MovimentacaoID" />
-        <input type="submit" value="Excluir" class="btn btn-danger"/>
-        <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+        <input type="submit" value="Excluir" class="btn btn-danger botao"/>
+        <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
     </form>
 </div>
