--- a/SaraiManagement/Views/Movimentacao/Edit.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Edit.cshtml
@@ -4,9 +4,22 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
-<h1>Editar</h1>
-<div class="row">
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center">Edição de Movimentação</h1>
+<hr />
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
+
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -46,9 +59,9 @@
                 <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
                 <span asp-validation-for="CaixaID" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+            <div class="form-group centraliza">
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
+                <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
             </div>
         </form>
     </div>
