--- a/SaraiManagement/Views/Usuario/Create.cshtml
+++ b/SaraiManagement/Views/Usuario/Create.cshtml
@@ -5,9 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cadastrar</h1>
+<style>
+    .botao {
+        margin: 0 5px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center">Cadastrar</h1>
 <hr />
-<div class="row">
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
+
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -26,9 +39,9 @@
                 <select asp-for="Tipo" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.tipoUsuario>()"></select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
+            <div class="form-group centraliza">
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
+                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
             </div>
         </form>
     </div>
