--- a/SaraiManagement/Views/Usuario/Edit.cshtml
+++ b/SaraiManagement/Views/Usuario/Edit.cshtml
@@ -11,6 +11,9 @@
 
     <div class="col-md-4">
         <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="UsuarioID"  />
+
             <div class="form-group">
                 <label asp-for="Nome" class="control-label">Nome:</label>
                 <input asp-for="Nome" class="form-control" />
