--- a/SaraiManagement/Views/Aluno/List.cshtml
+++ b/SaraiManagement/Views/Aluno/List.cshtml
@@ -2,6 +2,12 @@
 
 <h1>Lista</h1>
 
+<!--MESSAGEM BOX-->
+<script type="text/javascript">
+    alert("Operação realizada com sucesso!");
+</script>
+
+<!--LISTA ALUNO-->
 @foreach (var p in Model.Alunos)
 {
     <div class="card card-outline-primary m-1 p-1">
@@ -22,6 +28,7 @@
 <div>
     <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
 </div>
+
 
 
 
