--- a/SaraiManagement/Views/Shared/ValidacaoSucesso.cshtml
+++ b/SaraiManagement/Views/Shared/ValidacaoSucesso.cshtml
@@ -6,14 +6,18 @@
 
 <div class="centraliza container-fluid d-flex flex-wrap">
     <div>
-        <h5 class="font-weight-bold text-dark">Quantidade acima da disponível no estoque</h5>
+        <h5 class="font-weight-bold text-dark">Operação realizada com sucesso!</h5>
     </div>
 </div>
 
 
 <div class="centraliza container-fluid d-flex flex-wrap">
     <div>
-        <a class="text-center btn btn-lg btn-dark" asp-action="Index" asp-controller="Estoque">OK</a>
+        <a class="text-center btn btn-lg btn-dark " asp-action="Index" asp-controller="TelaInicial">OK </a>
     </div>
 </div>
+            
+
+
+
 
