--- a/SaraiManagement/Views/Aluno/Create.cshtml
+++ b/SaraiManagement/Views/Aluno/Create.cshtml
@@ -14,7 +14,11 @@
             
             <div class="form-group">
                 <label asp-for="DonatarioID" class="control-label"></label>
-                <select asp-for="DonatarioID" class="form-control" asp-items="ViewBag.DonatarioID"></select>
+                <select asp-for="DonatarioID" class="form-control" asp-items="ViewBag.DonatarioID">
+                    <option>
+                        Nenhum
+                    </option>
+                </select>
             </div>
             
             <div class="form-group">
