--- a/SaraiManagement/Views/Shared/_Layout2.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout2.cshtml
@@ -1,11 +1,10 @@
-﻿<!DOCTYPE html>
-
+﻿@using SaraiManagement.Models.ClassesEF
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-
     <title>Sarai Management</title>
 </head>
 
@@ -13,10 +12,17 @@
     <div class="navbar navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index">SARAI MANAGEMENT</a>
 
-        <form class="form-inline my-2 my-lg-0">
+        @*<form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>
+        </form>*@
+
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Sobre</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" asp-controller="Usuario" asp-action="Logout">Sair</a>
+        </div>
     </div>
 
     @RenderBody()
