--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -79,6 +79,9 @@
 
         </div>
     </div>
+    <div>
+        <a asp-controller="Usuario" asp-action="Logout" class="btn btn-primary">Sair</a>
+        </div>
 
 </div>
 
