--- a/SaraiManagement/Views/Movimentacao/Delete.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Delete.cshtml
@@ -23,7 +23,7 @@
 
 <h1 style="text-align: center;">Tem certeza que deseja excluir?</h1>
 <hr />
-<div>
+<div style="display: flex; justify-content: center; align-items: center;">
 
     <dl class="row">
         <dt class="col-sm-2">
