--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -1,47 +1,42 @@
 ﻿@model SaraiManagement.Models.ItemDoado
 
 @{ ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml"; }
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
+}
 
-
-<h4>Selecione a quantidade do item</h4>
+<h1 style="text-align: center;">Selecione a quantidade do item</h1>
 <hr />
-<div class="row">
+<div class="container-fluid d-flex flex-wrap centraliza">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
-        <div  style="visibility:hidden" class="form-group" >
+        <div style="visibility:hidden" class="form-group" >
             <label asp-for="@Model.DoacaoID" class="control-label"></label>
             <select asp-for="@Model.DoacaoID">
                 <option>@((ViewBag.DoacaoID as SelectList).Count())</option>
             </select>
         </div>
-            
-            <div class="form-group">
-                <label asp-for="@Model.DoacaoID" class="control-label"></label>
-                <select asp-for="@Model.DoacaoID">
-                    <option>@((ViewBag.DoacaoID as SelectList).Count())</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label asp-for="@Model.EstoqueID" class="control-label"></label>
 
-                <label asp-for="@Model.EstoqueID" class="control-label">Item:</label>
+        <div class="form-group">
+            <label asp-for="@Model.EstoqueID" class="control-label"></label>
 
-                <select asp-for="@Model.EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="@Model.Quantidade" class="control-label">Quantidade:</label>
-                <input asp-for="@Model.Quantidade" class="form-control" />
-                <span asp-validation-for="@Model.Quantidade" class="text-danger"></span>
-            </div>
+            <label asp-for="@Model.EstoqueID" class="control-label">Item:</label>
 
-            <div class="form-group">
-                <input type="submit" value="Finalizar" class="btn btn-success">
-                <input type="submit" value="Novo item" class="btn btn-primary" asp-route-x="Sim" />
-                <input type="submit" value="Vizualizar Itens" class="btn btn-primary" asp-route-x="Vizualizar">
-            </div>
+            <select asp-for="@Model.EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="@Model.Quantidade" class="control-label">Quantidade:</label>
+            <input asp-for="@Model.Quantidade" class="form-control" />
+            <span asp-validation-for="@Model.Quantidade" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Finalizar" class="btn btn-success botao">
+            <input type="submit" value="Novo item" class="btn btn-primary botao" asp-route-x="Sim" />
+            <input type="submit" value="Visualizar Itens" class="btn btn-primary botao" asp-route-x="Visualizar">
+        </div>
         </form>
     </div>
 </div>
