--- a/SaraiManagement/Views/ItemDoado/Delete.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Delete.cshtml
@@ -5,31 +5,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h3>Tem certeza que deseja excluir?</h3>
+<h1 style="text-align:center;">Tem certeza que deseja excluir?</h1>
+<hr />
 <div>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
-          @*@Html.DisplayNameFor(model => model.Estoque)*@
-          <label>Item:</label>
+            @*@Html.DisplayNameFor(model => model.Estoque)*@
+            <label class="fonte">Item:</label>
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Estoque.Descricao)
         </dd>
         <dt class="col-sm-2">
-            <label>Quantidade:</label>
-           @*@Html.DisplayNameFor(model => model.Quantidade)*@
+            <label class="fonte">Quantidade:</label>
+            @*@Html.DisplayNameFor(model => model.Quantidade)*@
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 fonte">
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
-       
+
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" class="centraliza">
         <input type="hidden" asp-for="ItemDoadoID" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+        <input type="submit" value="Delete" class="btn btn-danger botao" />
+        <a asp-action="List" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
     </form>
 </div>
