--- a/SaraiManagement/Views/ItemDoado/Edit.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Edit.cshtml
@@ -5,30 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>ItemDoado</h4>
-<hr />
-<div class="row">
+<h1 style="text-align:center;">Editar Item Doado</h1>
+<hr/>
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ItemDoadoID" />
+
             <div class="form-group">
                 <label asp-for="DoacaoID" class="control-label">Doação:</label>
                 <select asp-for="DoacaoID" class="form-control" asp-items="ViewBag.DoacaoID"></select>
                 <span asp-validation-for="DoacaoID" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="EstoqueID" class="control-label">Item:</label>
                 <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
                 <span asp-validation-for="EstoqueID" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label">Quantidade:</label>
                 <input asp-for="Quantidade" class="form-control" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
