--- a/SaraiManagement/Views/ItemDoado/List.cshtml
+++ b/SaraiManagement/Views/ItemDoado/List.cshtml
@@ -5,59 +5,59 @@
         Layout = "~/Views/Shared/_Layout.cshtml";
     }
 
-    <h1>Itens Selecionados</h1>
+<h1 style="text-align:center;">Itens Selecionados</h1>
 
 
-    <table class="table">
-        <thead>
+<table class="table">
+    <thead>
+        <tr>
+            <th class="fonte">
+                Descriçao
+            </th>
+            <th class="fonte">
+                Quantidade
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model.ItemDoados)
+        {
             <tr>
-                <th>
-                    Descriçao
-                </th>
-                <th>
-                    Quantidade
-                </th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Estoque.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantidade)
+                </td>
+
+                <td>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ItemDoadoID">Excluir</a>
+                </td>
             </tr>
-        </thead>
-        <tbody>
+        }
+    </tbody>
+</table>
 
-            @foreach (var item in Model.ItemDoados)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Estoque.Descricao)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantidade)
-                    </td>
+<!-- Botão para acionar modal -->
+<button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalExemplo">
+    Confirmar
+</button>
 
-                    <td>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ItemDoadoID">Excluir</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-
-    <!-- Botão para acionar modal -->
-    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalExemplo">
-        Confirmar
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                        Doaçao Concluida com sucesso!
-                    </h5>
-                </div>
-                <div class="modal-footer">
-                    <a class="btn btn-primary" asp-action="Index" asp-controller="TelaInicial" clas> OK </a>
-                </div>
+<!-- Modal -->
+<div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">
+                    Doaçao Concluida com sucesso!
+                </h5>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-primary" asp-action="Index" asp-controller="TelaInicial" clas> OK </a>
             </div>
         </div>
     </div>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="Estoque"> Voltar </a>
+</div>
+<a class="btn btn-primary" asp-action="Index" asp-controller="Estoque"> Voltar </a>
 
