--- a/SaraiManagement/Views/Shared/_Layout2.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout2.cshtml
@@ -1,4 +1,6 @@
-﻿@using SaraiManagement.Models.ClassesEF
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,15 +13,9 @@
 <body class="gradient">
     <div class="navbar navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index">SARAI MANAGEMENT</a>
-
-        @*<form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>*@
-
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+        <h4 class="nav-link dropdown-toggle navbar-brand" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> @HttpContextAccessor.HttpContext.Session.GetString("usuario_session")</h4>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Sobre</a>
+            <a class="dropdown-item" asp-controller="TelaInicial" asp-action="Sobre">Sobre</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" asp-controller="Usuario" asp-action="Logout">Sair</a>
         </div>
