--- a/SaraiManagement/Views/Donatario/Create.cshtml
+++ b/SaraiManagement/Views/Donatario/Create.cshtml
@@ -5,9 +5,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cadastrar</h1>
 
-<div class="row">
+}
+<style>
+    .botao {
+        margin: 0 5px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h1 style="text-align: center">Cadastrar</h1>
+<hr/>
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
