--- a/SaraiManagement/Views/Shared/_Layout.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -12,10 +15,15 @@
 <body class="gradient">
     <div class="navbar navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index">SARAI MANAGEMENT</a>
-        @*<form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>*@
+        @if (@HttpContextAccessor.HttpContext.Session.GetString("usuario_session")!=null) 
+        {
+            <h4 class="nav-link dropdown-toggle navbar-brand" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> @HttpContextAccessor.HttpContext.Session.GetString("usuario_session")</h4>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" asp-controller="TelaInicial" asp-action="Sobre">Sobre</a>
+            <div class="dropdown-divider"></div>
+                <a class="dropdown-item" asp-controller="Usuario" asp-action="Logout">Sair</a>
+        </div>
+        }
     </div>
     <!-- m (margin) Margem externa de uma div
          p (padding) Margem interna de uma div -->
