--- a/SaraiManagement/Views/Donatario/Create.cshtml
+++ b/SaraiManagement/Views/Donatario/Create.cshtml
@@ -4,9 +4,6 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
-}
 <style>
     .botao {
         margin: 0 5px;
@@ -45,9 +42,9 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
+            <div class="form-group centraliza">
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
+                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success botao" role="button" aria-pressed="true">Voltar </a>
             </div>
         </form>
     </div>
