--- a/SaraiManagement/Views/Donatario/Delete.cshtml
+++ b/SaraiManagement/Views/Donatario/Delete.cshtml
@@ -24,6 +24,7 @@
 <h1 style="text-align: center;">Tem certeza que deseja excluir?</h1>
 <hr/>
 <div class="centraliza">
+
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
@@ -50,10 +51,10 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
     </dl>
-
-    <form asp-action="Delete" class="centraliza">
+    </div>
+    <hr />
+    <form class="centraliza" asp-action="Delete" >
         <input type="hidden" asp-for="DonatarioID" />
         <input type="submit" value="Excluir" class="btn btn-danger botao" />
         <a asp-action="Details" asp-route-id="@Model.DonatarioID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
     </form>
-</div>
