--- a/SaraiManagement/Views/Donatario/Edit.cshtml
+++ b/SaraiManagement/Views/Donatario/Edit.cshtml
@@ -5,9 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    .botao {
+        margin: 0 5px;
+    }
+
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
 <h1>Editar</h1>
 
-<div class="row">
+<div class="row centraliza">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -33,8 +49,8 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="Details" asp-route-id="@Model.DonatarioID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
+                <a asp-action="Details" asp-route-id="@Model.DonatarioID" class="btn btn-success botao" role="button" aria-pressed="true">Voltar</a>
             </div>
         </form>
     </div>
