--- a/SaraiManagement/Views/Estoque/Create.cshtml
+++ b/SaraiManagement/Views/Estoque/Create.cshtml
@@ -5,10 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    .botao {
+        margin: 0 5px;
+    }
+
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 
 <h4>Estoque</h4>
-
-<div class="row">
+<hr/>
+<div class="row centraliza">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -27,10 +42,10 @@
                 <select asp-for="Categoria" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Categoria>()"></select>
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+            <div class="form-group centraliza">
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
 
-                <a class="btn btn-success" asp-action="Index" asp-controller="TelaInicial" clas> Voltar </a>
+                <a class="btn btn-success botao" asp-action="Index" asp-controller="TelaInicial" clas> Voltar </a>
             </div>
         </form>
     </div>
