--- a/SaraiManagement/Views/Estoque/Delete.cshtml
+++ b/SaraiManagement/Views/Estoque/Delete.cshtml
@@ -4,14 +4,29 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
+    .fonte {
+        font-size: 20px;
+    }
 
-<h3>Tem certeza que deseja excluir?</h3>
-<div>
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+<h3 class="centraliza">Tem certeza que deseja excluir?</h3>
+<hr/>
+<div class="centraliza">
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            <label>Descrição</label>
+            <label class="fonte">Descrição</label>
             @*@Html.DisplayNameFor(model => model.Descricao)*@
         </dt>
         <dd class = "col-sm-10">
@@ -30,10 +45,9 @@
             @Html.DisplayFor(model => model.Categoria)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+ </div>   
+    <form class="centraliza" asp-action="Delete">
         <input type="hidden" asp-for="EstoqueID" />
-        <input type="submit" value="Excluir" class="btn btn-danger" />
-        <a class="btn btn-success" asp-action="List" asp-controller="Estoque"> Voltar</a>
+        <input type="submit" value="Excluir" class="btn btn-danger botao" />
+        <a class="btn btn-success botao" asp-action="List" asp-controller="Estoque"> Voltar</a>
     </form>
-</div>
