--- a/SaraiManagement/Views/Estoque/Edit.cshtml
+++ b/SaraiManagement/Views/Estoque/Edit.cshtml
@@ -4,11 +4,25 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .botao {
+        margin: 0 5px;
+    }
 
+    .fonte {
+        font-size: 20px;
+    }
+
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 
 <h4>Estoque</h4>
 <hr />
-<div class="row">
+<div class="row centraliza">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -28,9 +42,9 @@
                 <select asp-for="Categoria" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Categoria>()"></select>
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a class="btn btn-success" asp-action="List" asp-controller="Estoque" clas> Voltar </a>
+            <div class="form-group centraliza">
+                <input type="submit" value="Salvar" class="btn btn-primary botao" />
+                <a class="btn btn-success botao" asp-action="List" asp-controller="Estoque" clas> Voltar </a>
             </div>
         </form>
     </div>
