--- a/SaraiManagement/Views/Shared/_Layout2.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout2.cshtml
@@ -1,11 +1,5 @@
-<<<<<<< HEAD
-﻿@using SaraiManagement.Models.ClassesEF
-@using SaraiManagement.Controllers
-=======
-﻿@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Http
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-
->>>>>>> Davi
 <!DOCTYPE html>
 <html>
 <head>
