--- a/SaraiManagement/Views/Doacao/List.cshtml
+++ b/SaraiManagement/Views/Doacao/List.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1 style="text-align: center">Lista de Doaçoes</h1>
 
-<h1>Lista de Doaçoes</h1>
 <br />
 
 
@@ -22,7 +22,7 @@
 
 
 
-<table class="table" >
+<table class="table">
     <thead>
         <tr>
             <th>
