--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -20,10 +20,10 @@
         }
     }
 </script>
+<h1 style="text-align: center">Doação</h1>
 
-<h1>Doação</h1>
 <hr />
-<div class="row">
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
