--- a/SaraiManagement/Views/Doacao/ListPorID.cshtml
+++ b/SaraiManagement/Views/Doacao/ListPorID.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Lista de Doaçoes</h1>
+<h1 style="text-align: center">Lista de Doaçoes</h1>
 <br />
 
 <table class="table">
