--- a/SaraiManagement/Views/Doador/Delete.cshtml
+++ b/SaraiManagement/Views/Doador/Delete.cshtml
@@ -5,38 +5,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Deletar</h1>
 
-<h3>Tem certeza que deseja excluir?</h3>
+
+<h1 style="text-align: center">Tem certeza que deseja excluir?</h1>
 <div>
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
+            @*@Html.DisplayNameFor(model => model.Nome)*@
+            <label class="fonte">Nome: </label>
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cidade)
+            @*@Html.DisplayNameFor(model => model.Cidade)*@
+            <label class="fonte">Cidade: </label>
+
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cidade)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.regularidadeDoador)
+            @*@Html.DisplayNameFor(model => model.regularidadeDoador)*@
+            <label class="fonte">Regularidade: </label>
+
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.regularidadeDoador)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.inicioDaDoacao)
+            @*@Html.DisplayNameFor(model => model.inicioDaDoacao)*@
+            <label class="fonte">Início da Doação: </label>
+
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.inicioDaDoacao)
         </dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form class="centraliza" asp-action="Delete">
         <input type="hidden" asp-for="DoadorID" />
         <input type="submit" value="Excluir" class="btn btn-danger" />
         <a asp-action="Consultar" asp-route-id="@Model.DoadorID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
