--- a/SaraiManagement/Views/Doador/Edit.cshtml
+++ b/SaraiManagement/Views/Doador/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Editar</h1>
-
-<div class="row">
+<h1 style="text-align: center">Editar dados do Doador</h1>
+<hr />
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
