--- a/SaraiManagement/Views/Doacao/ListPorID.cshtml
+++ b/SaraiManagement/Views/Doacao/ListPorID.cshtml
@@ -12,17 +12,20 @@
     <thead>
         <tr>
             <th>
-                Donatario
+                <label class="fonte">Donatário </label>
+
             </th>
 
             <th>
-                Valor
+                <label class="fonte">Valor </label>
+
             </th>
             <th>
-                Data
+                <label class="fonte">Data Doação </label>
             </th>
             <th>
-                Usuario
+                <label class="fonte">Usuário </label>
+
             </th>
             <th>
 
@@ -56,4 +59,4 @@
         }
     </tbody>
 </table>
-<a class="btn btn-primary" asp-controller="Doacao" asp-action="List">Voltar</a>
+<a class="btn btn-primary" asp-controller="Donatario" asp-action="List">Voltar</a>
