--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -28,16 +28,20 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DonatarioID" class="control-label"></label>
+                @*<label asp-for="DonatarioID" class="control-label"></label>*@
+                <label class="fonte">Donatário: </label>
                 <select asp-for="DonatarioID" class="form-control" asp-items="ViewBag.DonatarioID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="dataDoacao" class="control-label"></label>
+                @*<label asp-for="dataDoacao" class="control-label"></label>*@
+                <label class="fonte">Data Doação: </label>
+
                 <input asp-for="dataDoacao" class="form-control" />
                 <span asp-validation-for="dataDoacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioID" class="control-label"></label>
+                @*<label asp-for="UsuarioID" class="control-label"></label>*@
+                <label class="fonte">Usuário: </label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
 
@@ -45,12 +49,14 @@
 
             <div id="test" class="hidden form-group" style="display:none">
                 <div>
-                    <label asp-for="Valor" class="control-label"></label>
+                    @*<label asp-for="Valor" class="control-label"></label>*@
+                    <label class="fonte">Valor: </label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
                 </div>
                 <div>
-                    <label asp-for="CaixaID" class="control-label"></label>
+                    @*<label asp-for="CaixaID" class="control-label"></label>*@
+                    <label class="fonte">Caixa: </label>
                     <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
                 </div>
             </div>
