--- a/SaraiManagement/Views/ItemDoado/ListaDoacao.cshtml
+++ b/SaraiManagement/Views/ItemDoado/ListaDoacao.cshtml
@@ -34,3 +34,5 @@
     </tbody>
 </table>
 <a asp-controller="Doacao" asp-action="List" class="btn btn-primary">Voltar</a>
+<a asp-controller="Doacao" asp-action="ListPorID" class="btn btn-info botao">Voltar</a>
+
