--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -133,7 +133,7 @@
             </div>
             <div class="modal-body" style="margin: 0 auto">
                 <a asp-controller="Donatario" asp-action="List" class="btn btn-primary">Realizar Doação</a>
-                <a asp-controller="Doacao" asp-action="List" class="btn btn-primary">Visualizar Doaçoes</a>
+                <a asp-controller="Donatario" asp-action="List" class="btn btn-primary">Visualizar Doações</a>
 
             </div>
         </div>
