--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -63,11 +63,11 @@
 
             <div class="form-group">
                 <div>
-                    <a class="btn btn-outline-primary" onclick="mostra('test')">Fazer doaçao em dinheiro</a>
+                    <a class="btn btn-primary" onclick="mostra('test')">Fazer doaçao em dinheiro</a>
                 </div>
                 <br />
                 <div>
-                    <input type="submit" class="btn btn-outline-primary" asp-route-x="1" value="Fazer doaçao de itens" />
+                    <input type="submit" class="btn btn-primary" asp-route-x="1" value="Fazer doaçao de itens" />
                 </div>
                 <br />
 
