--- a/SaraiManagement/Views/Doacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Doacao/Consultar.cshtml
@@ -42,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index" asp-controller="Estoque">Edit</a> |
+    <a asp-action="Index" asp-controller="Estoque">Edit</a>
     <a asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
 </div>
