--- a/SaraiManagement/Views/Estoque/Delete.cshtml
+++ b/SaraiManagement/Views/Estoque/Delete.cshtml
@@ -4,50 +4,37 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<style>
-    .botao {
-        margin: 0 5px;
-    }
 
-    .fonte {
-        font-size: 20px;
-    }
 
-    .centraliza {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-</style>
+<h1 style="text-align: center;">Tem certeza que deseja excluir?</h1>
 
-<h3 class="centraliza">Tem certeza que deseja excluir?</h3>
-<hr/>
+<hr />
 <div class="centraliza">
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            <label class="fonte">Descrição</label>
-            @*@Html.DisplayNameFor(model => model.Descricao)*@
+            @Html.DisplayNameFor(model => model.Descricao):
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantidade)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantidade):
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Categoria):
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Categoria)
         </dd>
     </dl>
- </div>   
-    <form class="centraliza" asp-action="Delete">
-        <input type="hidden" asp-for="EstoqueID" />
-        <input type="submit" value="Excluir" class="btn btn-danger botao" />
-        <a class="btn btn-success botao" asp-action="List" asp-controller="Estoque"> Voltar</a>
-    </form>
+</div>
+<hr />
+
+<form class="centraliza" asp-action="Delete">
+    <input type="hidden" asp-for="EstoqueID" />
+    <input type="submit" value="Excluir" class="btn btn-danger botao" />
+    <a class="btn btn-success botao" asp-action="List" asp-controller="Estoque"> Voltar</a>
+</form>
