--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Estoque</h1>
 
-<table>
+<table class="table">
     <thead>
         <tr>
             <th>
@@ -35,7 +35,7 @@
     <tr>
         <td>
         <div>
-            <a class="btn btn-outline-success botao" asp-controller="ItemDoado" asp-action="Create" asp-route-idEstoque="@item.EstoqueID" >Selecionar</a>
+            <a class="btn btn-success botao" asp-controller="ItemDoado" asp-action="Create" asp-route-idEstoque="@item.EstoqueID" >Selecionar</a>
         </div>
         </td>
 
